--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duden",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Extension for duden.",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/derjoker/duden#readme",
   "devDependencies": {
     "web-ext": "^1.8.1"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1"
   }
 }
