--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "duden",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Extension for duden.",
   "main": "index.js",
   "scripts": {
-    "start": "web-ext run --firefox=/Applications/FirefoxDeveloperEdition.app/Contents/MacOS/firefox-bin",
+    "start": "web-ext run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
