--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "duden",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Extension for duden.",
   "content_scripts": [
     {
@@ -9,7 +9,7 @@
         "http://www.duden.de/*"
       ],
       "js": [
-        "./node_modules/jquery/dist/jquery.min.js",
+        "./dist/jquery.min.js",
         "./index.js"
       ]
     }
